; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_19836.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_19836.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [17 x i8] c"password is %s \0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @main() #0 {
  %1 = alloca [128 x i8], align 16
  %2 = alloca [128 x i8], align 16
  %3 = alloca i32, align 4
  %4 = getelementptr inbounds [128 x i8], [128 x i8]* %1, i64 0, i64 0
  store i8 -54, i8* %4, align 16
  %5 = getelementptr inbounds [128 x i8], [128 x i8]* %1, i64 0, i64 1
  store i8 -85, i8* %5, align 1
  %6 = getelementptr inbounds [128 x i8], [128 x i8]* %1, i64 0, i64 2
  store i8 -53, i8* %6, align 2
  %7 = getelementptr inbounds [128 x i8], [128 x i8]* %1, i64 0, i64 3
  store i8 -88, i8* %7, align 1
  %8 = getelementptr inbounds [128 x i8], [128 x i8]* %1, i64 0, i64 4
  store i8 -54, i8* %8, align 4
  %9 = getelementptr inbounds [128 x i8], [128 x i8]* %1, i64 0, i64 5
  store i8 0, i8* %9, align 1
  %10 = getelementptr inbounds [128 x i8], [128 x i8]* %1, i64 0, i64 0
  %11 = load i8, i8* %10, align 16
  %12 = sext i8 %11 to i32
  %13 = sub nsw i32 202, %12
  %14 = add nsw i32 %13, 97
  %15 = trunc i32 %14 to i8
  %16 = getelementptr inbounds [128 x i8], [128 x i8]* %2, i64 0, i64 0
  store i8 %15, i8* %16, align 16
  store i32 1, i32* %3, align 4
  br label %17

17:                                               ; preds = %43, %0
  %18 = load i32, i32* %3, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds [128 x i8], [128 x i8]* %1, i64 0, i64 0
  %21 = call i64 @strlen(i8* %20)
  %22 = icmp ult i64 %19, %21
  br i1 %22, label %23, label %46

23:                                               ; preds = %17
  %24 = load i32, i32* %3, align 4
  %25 = sub nsw i32 %24, 1
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds [128 x i8], [128 x i8]* %1, i64 0, i64 %26
  %28 = load i8, i8* %27, align 1
  %29 = sext i8 %28 to i32
  %30 = load i32, i32* %3, align 4
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds [128 x i8], [128 x i8]* %1, i64 0, i64 %31
  %33 = load i8, i8* %32, align 1
  %34 = sext i8 %33 to i32
  %35 = xor i32 %29, %34
  %36 = load i32, i32* %3, align 4
  %37 = sub nsw i32 %36, 1
  %38 = xor i32 %35, %37
  %39 = trunc i32 %38 to i8
  %40 = load i32, i32* %3, align 4
  %41 = sext i32 %40 to i64
  %42 = getelementptr inbounds [128 x i8], [128 x i8]* %2, i64 0, i64 %41
  store i8 %39, i8* %42, align 1
  br label %43

43:                                               ; preds = %23
  %44 = load i32, i32* %3, align 4
  %45 = add nsw i32 %44, 1
  store i32 %45, i32* %3, align 4
  br label %17

46:                                               ; preds = %17
  %47 = getelementptr inbounds [128 x i8], [128 x i8]* %1, i64 0, i64 0
  %48 = call i64 @strlen(i8* %47)
  %49 = getelementptr inbounds [128 x i8], [128 x i8]* %2, i64 0, i64 %48
  store i8 0, i8* %49, align 1
  %50 = getelementptr inbounds [128 x i8], [128 x i8]* %2, i64 0, i64 0
  %51 = call i32 @printf(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i8* %50)
  ret void
}

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @printf(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
